--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     </div>
   </nav>
 <body>
-    
+   
+    <div class="mt-5">
     <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -57,10 +58,10 @@
             <img src="https://th.bing.com/th/id/OIP.nNWEehyFud-aD8V9VM3V5gHaMW?pid=ImgDet&w=194&h=323&c=7&dpr=1.3" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src=".vscode/assets/1ef267b7-08d1-472a-bacb-6bd5127d7bec (1).jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src=".vscode/assets/95bab331-07f9-4e72-85a0-79eb903c8801.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -73,11 +74,11 @@
         </button>
       </div>
     
-      <div class="container text-center mt-4">
+      <div class="container text-center mt-5">
         <div class="row justify-content-center">
           <div class="col-12 col-md-3 mb-3 mx-1">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src=".vscode/assets/dfa824f2-1125-43ad-b1b7-c58af5f872e0.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -87,7 +88,7 @@
           </div>
           <div class="col-12 col-md-3 mb-3 mx-1">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src=".vscode/assets/914062677c761982ceee507f6575e8be.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +98,7 @@
           </div>
           <div class="col-12 col-md-3 mb-3 mx-1">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src=".vscode/assets/1088a9e84f97015e3a3025097ec944da.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,6 +108,49 @@
           </div>
         </div>
       </div>
+
+      <div class="container text-center mt-5">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-3 mb-3 mx-1">
+            <div class="card" style="width: 18rem;">
+                <img src=".vscode/assets/49ea99073fc2565402388bf94a64655d.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+          </div>
+          <div class="col-12 col-md-3 mb-3 mx-1">
+            <div class="card" style="width: 18rem;">
+                <img src=".vscode/assets/5f5bf070efccafbb9a06220c0f534863.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+ 
+      <footer class="footer d-flex flex-column align-items-center justify-content-center" style="min-height: 100px; "> 
+        <div class="container d-flex justify-content-between align-items-center">
+            <p class="mb-0">logo</p>
+            <div class="d-flex flex-grow-1 justify-content-center">
+            <div class="text-center mx-3">
+           <ul class="list-inline mb-0">
+                <li class="list-inline-item"><a href="#">LOCATION</a></li>
+                <li class="list-inline-item"><a href="#">CONTACT US</a></li>
+            </ul>
+        </div>
+        <div class="text-center"> 
+                <a href="www.facebook.com" class="mx-2"><i class="fab fa-facebook-f"></i>Facebook</a>,
+                <a href="www.twitter.com" class="mx-2"><i class="fab fa-twitter"></i>Twitter</a>,
+                <a href="www.instagram.com" class="mx-2"><i class="fab fa-instagram"></i>Instagram</a>
+            </p>
+        </div>
+    </footer>
 
 </body>
 </html>
