--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <nav class="navbar navbar-expand-lg" style="background-color: darkgray;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#">
+            <img src=".vscode/Red Black Modern Fitness Logo (1).png" alt="My Brand Logo" width="30" height="30" class="d-inline-block align-text-top">
+            Physical Fitness Exercise
+        </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,7 +34,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Videos</a></li>
-              <li><a class="dropdown-item" href="#">Contact Us</a></li>
+              <li><a class="dropdown-item" href="#">Basic Exercises</a></li>
               <li><hr class="dropdown-divider"></li>
             </ul>
           </li>
@@ -80,9 +83,8 @@
             <div class="card" style="width: 18rem;">
                 <img src=".vscode/assets/dfa824f2-1125-43ad-b1b7-c58af5f872e0.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">PUSH UP EXERCISE</h5>
+                  <p class="card-text">A push-up is a bodyweight exercise that consists of raising and lowering one’s body weight against the floor using the arms. This calisthenics exercise targets the pectorals (chest), deltoids (shoulders), serratus anterior (fan-shaped muscle behind your armpits), and the triceps.</p>
                 </div>
               </div>
           </div>
@@ -90,9 +92,8 @@
             <div class="card" style="width: 18rem;">
                 <img src=".vscode/assets/914062677c761982ceee507f6575e8be.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">CURL UP</h5>
+                  <p class="card-text">The curl-up exercise is one of the most common exercises that target the abdominal muscles. The curl up exercise works on the endurance of the abdominals, important in back support and core stability. Having abdominal muscles with high endurance helps prevent low-back pain.</p>
                 </div>
               </div>
           </div>
@@ -101,8 +102,7 @@
                 <img src=".vscode/assets/1088a9e84f97015e3a3025097ec944da.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">Planking provides many physical benefits. Strengthening the core is an important aspect of any workout regimen. A strong and solid core looks and feels good. But more importantly, it helps to stabilize, balance, and power the body during just about every other activity.</p>
                 </div>
               </div>
           </div>
@@ -115,9 +115,8 @@
             <div class="card" style="width: 18rem;">
                 <img src=".vscode/assets/49ea99073fc2565402388bf94a64655d.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Home Exercise</h5>
+                  <a href="https://www.youtube.com/watch?v=cbKkB3POqaY" class="btn btn-primary" target="_blank">Watch Video</a>
                 </div>
               </div>
           </div>
@@ -125,9 +124,8 @@
             <div class="card" style="width: 18rem;">
                 <img src=".vscode/assets/5f5bf070efccafbb9a06220c0f534863.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Gym Exercise</h5>
+                  <a href="https://www.youtube.com/watch?v=Im5wJLdudDg&t=18s" class="btn btn-primary" target="_blank">Watch Video</a>
                 </div>
               </div>
           </div>
@@ -136,20 +134,17 @@
  
       <footer class="footer d-flex flex-column align-items-center justify-content-center" style="min-height: 100px; "> 
         <div class="container d-flex justify-content-between align-items-center">
-            <p class="mb-0">logo</p>
-            <div class="d-flex flex-grow-1 justify-content-center">
-            <div class="text-center mx-3">
-           <ul class="list-inline mb-0">
-                <li class="list-inline-item"><a href="#">LOCATION</a></li>
-                <li class="list-inline-item"><a href="#">CONTACT US</a></li>
-            </ul>
+            <a href="#">
+                <img src=".vscode/Red Black Modern Fitness Logo (1).png" alt="Logo" style="height: 100px;">
+            </a>
+        <div class="text-center mt-3">
+            <div class="d-flex justify-content-center">
+                <a href="https://www.facebook.com/profile.php?id=100075551154213" class="mx-2" aria-label="Facebook"><i class="fab fa-facebook-f"></i>Facebook</a>,
+                <a href="https://x.com/masculine_beast" class="mx-2" aria-label="Twitter"><i class="fab fa-twitter"></i>Twitter</a>,
+                <a href="https://www.instagram.com/physicalfitnessandexercise?igsh=MXFmODN6bWtheDFoaw==" class="mx-2" aria-label="Instagram"><i class="fab fa-instagram"></i>Instagram</a>
         </div>
-        <div class="text-center"> 
-                <a href="www.facebook.com" class="mx-2"><i class="fab fa-facebook-f"></i>Facebook</a>,
-                <a href="www.twitter.com" class="mx-2"><i class="fab fa-twitter"></i>Twitter</a>,
-                <a href="www.instagram.com" class="mx-2"><i class="fab fa-instagram"></i>Instagram</a>
-            </p>
-        </div>
+     </div>
+     </div>
     </footer>
 
 </body>
